0.29
 - Add support for cze/slo book editions in description.
 - Add tests for field 008 dates.
 - Rewrite processing of covers.
 - Rewrite processing of publication date to 008 field.

0.28 2025-03-30T16:33:14+02:00
 - Add test file for field 700 testing.
 - Remove obsolete module in tests (GH#4, thank Slaven Rezić).

0.27 2025-03-29T09:53:02+01:00
 - Remove obsolete module in tests (GH#4, thank Slaven Rezić).

0.26 2025-03-28T17:14:27+01:00
 - Add Czech book edition Wikidata description test.
 - Add book edition cleanup use case.
 - Add test for failing multiple publishers cnb record.
 - Add test for multiple 700 field with multiple roles.
 - Fix Slovak Wikidata description, add tests.
 - Move some test data to XML.

0.25 2025-03-19T22:38:02+01:00
 - Add constructor tests for Transform.
 - Add processing of bad ISBN.
 - Add use case for publication place.
 - Fix processing of all ČČNB ids.
 - Remove test file, which is similar as another.

0.24 2025-03-17T17:49:03+01:00
 - Add support for multiple subfields.
 - Fix multiple identical covers.

0.23 2025-01-29T13:35:17+01:00
 - Fix MANIFEST file.
 - Fix test with Krakatit book edition and Krameriuses.
 - Improve tests.

0.22 2025-01-23T08:37:25+01:00
 - Add cover cleanup use case.
 - Add edition number cleanup use case.
 - Add publication place cleanup use case.
 - Add support for 'translated edition' in P31.
 - Add tests for three ISBNs in book edition.
 - Update copyright years.

0.21 2024-11-25T23:55:13+01:00
 - Add clean_issn() helper subroutine.
 - Add detection of ISSN in series.
 - Add edition number cleanup use case.
 - Add series name cleanup use case.
 - Add test for cycle.

0.20 2024-11-22T19:41:33+01:00
 - Add edition number cleanup use case.
 - Fix 787i field existing.

0.19 2024-11-12T08:57:15+01:00
 - Add another cover cleanup use case.
 - Rewrite setting of label to 'mul'.

0.18 2024-11-04T21:23:56+01:00
 - Add another edition number cleanup use case.
 - Add processing of cycles.
